--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -19,7 +19,7 @@
 	
 	<div>
 	<img src="images/sigma.png" style="height:100px;" />
-	<h1>My New and Improved Sum App</h1>
+	<h1>Sum App</h1>
 	</div>
 		
 	<div>
